Must downgrade to java 19 foreign API because we're blocked on other projects